# yonaa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE
example/: CMakeLists.txt  logging_example.cpp
include/yonaa/: acceptor.hpp  addresses.hpp  buffer.hpp  client.hpp  connection.hpp  endpoint.hpp  logging.hpp  resolve.hpp  server.hpp  types.hpp  yonaa.hpp
include/yonaa/detail/: getaddrinfo.hpp  poll.hpp  sockaddr_ops.hpp  socket_ops.hpp
src/: acceptor.cpp  client.cpp  connection.cpp  endpoint.cpp  logging.cpp  resolve.cpp  server.cpp
src/detail/: getaddrinfo.cpp  poll.cpp  sockaddr_ops.cpp  socket_ops.cpp
test/: CMakeLists.txt  acceptor.test.cpp  client.test.cpp  connection.test.cpp  resolve.test.cpp
test/detail/: poll.test.cpp  socket_ops.test.cpp
test/test_utils/: test_utils.cpp  test_utils.hpp
